@@ -1,3 +1,6 @@
+# This file is generated by Dist::Zilla::Plugin::CPANFile v6.017
+# Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
+
 requires "Class::Accessor::Fast" => "0";
 requires "Digest::SHA1" => "0";
 requires "Encode" => "0";
@@ -13,14 +16,16 @@ requires "Plack::Request" => "0";
 requires "Plack::Response" => "0";
 requires "base" => "0";
 requires "perl" => "5.010";
-requires "strict" => "0";
-requires "warnings" => "0";
 
 on 'build' => sub {
   requires "Module::Build" => "0.28";
 };
 
 on 'test' => sub {
+  requires "File::Spec" => "0";
+  requires "File::Temp" => "0";
+  requires "IO::Handle" => "0";
+  requires "IPC::Open3" => "0";
   requires "Test::More" => "0";
 };
 
