@@ -1,35 +1,5 @@
 name    = Net-Matrix-Webhook
-author  = Thomas Klausner <domm@cpan.org>
-license = Perl_5
-copyright_holder = Thomas Klausner
-copyright_year   = 2020
+copyright_year   = 2020 - 2021
 
-[GatherDir]
-exclude_match = local
-exclude_match = cpanfile
-[PruneCruft]
-[ManifestSkip]
-[MetaYAML]
-[MetaJSON]
-[License]
-[PodWeaver]
-[ReadmeAnyFromPod]
-type = markdown
-filename = README.md
-location = build
-[CopyFilesFromBuild]
-copy = README.md
-copy = cpanfile
-[ExecDir]
-[Repository]
-[MetaResources]
-[CheckChangeLog]
-[Manifest]
-[TestRelease]
-[ConfirmRelease]
-[AutoPrereqs]
-[CPANFile]
-[VersionFromModule]
-[ModuleBuild]
-[InstallGuide]
-[@Git]
+[@Author::DOMM]
+Git::GatherDir.exclude_match = ^Dockerfile
