@@ -1,7 +1,0 @@
-#!/usr/bin/perl
-
-use Test::More;
-
-require_ok('Net::Matrix::Webhook');
-
-done_testing();
